Translate "Authentication failed..." message
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>
Signed-off-by: Baoyuan Xing <bxing@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -3,5 +3,6 @@
   "Pin to taskbar": "Épingler",
   "Bring to Front": "Mettre au premier plan",
   "Close": "Fermer",
-  "Open": "Ouvrir"
+  "Open": "Ouvrir",
+  "Authentication failed for {{numTypes}} types. Types: {{types}}": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}"
 }
