Better translation to Japanese
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -4,5 +4,5 @@
   "Bring to Front": "最前面に移動",
   "Close": "閉じる",
   "Open": "開く",
-  "Authentication failed for {{numTypes}} types. Types: {{types}}": "Authentication failed for {{numTypes}} types. Types: {{types}}"
+  "Authentication failed for {{numTypes}} types. Types: {{types}}": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました"
 }
