Use keys instead of literal strings in translation files * Set English trasnlation file as a fallback
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>
Signed-off-by: Baoyuan Xing <bxing@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -1,8 +1,8 @@
 {
-  "Unpin from taskbar": "Désépingler",
-  "Pin to taskbar": "Épingler",
-  "Bring to Front": "Mettre au premier plan",
+  "UnpinFromTaskbar": "Désépingler",
+  "PinToTaskbar": "Épingler",
+  "BringToFront": "Mettre au premier plan",
   "Close": "Fermer",
   "Open": "Ouvrir",
-  "Authentication failed for {{numTypes}} types. Types: {{types}}": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}"
+  "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}"
 }
