--- a/virtual-desktop/src/assets/i18n/messages.ja.xlf
+++ b/virtual-desktop/src/assets/i18n/messages.ja.xlf
@@ -29,7 +29,7 @@
         <note priority="1" from="meaning">label</note>
       </trans-unit>
       <trans-unit id="login-button-title" datatype="html">
-        <source>Login</source><target state="new">ログイン</target>
+        <source>Log in</source><target state="new">ログイン</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
           <context context-type="linenumber">37</context>
@@ -38,14 +38,11 @@
         <note priority="1" from="meaning">button title</note>
       </trans-unit>
       <trans-unit id="signout-button-title" datatype="html">
-        <source>Sign Out</source><target state="new">サインアウト</target>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.ts</context>
-          <context context-type="linenumber">27</context>
-        </context-group>
+        <source>Log out</source><target state="new">ログアウト</target>
+        
         <note priority="1" from="description">Title of Sign out button</note>
         <note priority="1" from="meaning">signout button</note>
-      </trans-unit>
+      <context-group purpose="location"><context context-type="sourcefile">src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.ts</context><context context-type="linenumber">28</context></context-group></trans-unit>
     </body>
   </file>
 </xliff>
