--- a/virtual-desktop/src/assets/i18n/messages.xlf
+++ b/virtual-desktop/src/assets/i18n/messages.xlf
@@ -30,7 +30,7 @@
         <note priority="1" from="meaning">label</note>
       </trans-unit>
       <trans-unit id="login-button-title" datatype="html">
-        <source>Login</source>
+        <source>Log in</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
           <context context-type="linenumber">37</context>
@@ -39,10 +39,10 @@
         <note priority="1" from="meaning">button title</note>
       </trans-unit>
       <trans-unit id="signout-button-title" datatype="html">
-        <source>Sign Out</source>
+        <source>Log out</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.ts</context>
-          <context context-type="linenumber">27</context>
+          <context context-type="linenumber">28</context>
         </context-group>
         <note priority="1" from="description">Title of Sign out button</note>
         <note priority="1" from="meaning">signout button</note>
