add translations for new string. Signed-off-by: Baoyuan Xing <bxing@rocketsoftware.com>
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -4,5 +4,6 @@
   "BringToFront": "Mettre au premier plan",
   "Close": "Fermer",
   "Open": "Ouvrir",
+  "Properties":"Propriétés",
   "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}"
 }
