--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -4,5 +4,6 @@
   "BringToFront": "На передний план",
   "Close": "Закрыть",
   "Open": "Открыть",
+  "Properties": "Свойства",
   "AuthenticationFailed": "Ошибка аутентификации для {{types}}"
 }
