--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -4,5 +4,6 @@
   "BringToFront": "Bring to Front",
   "Close": "Close",
   "Open": "Open",
+  "Properties":"Properties",
   "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}"
 }
