--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -4,6 +4,6 @@
   "BringToFront": "最前面に移動",
   "Close": "閉じる",
   "Open": "開く",
-  "Properties":"プロパティ",
+  "Properties":"プロパティー",
   "AuthenticationFailed": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました"
 }
