prevent from login with empty username Signed-off-by: Baoyuan Xing <bxing@rocketsoftware.com>
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -5,5 +5,6 @@
   "Close": "Close",
   "Open": "Open",
   "Properties":"Properties",
-  "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}"
+  "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
+  "UsernameRequired": "Username required"
 }
