--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -5,5 +5,6 @@
   "Close": "Fermer",
   "Open": "Ouvrir",
   "Properties":"Propriétés",
-  "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}"
+  "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
+  "UsernameRequired": "Nom d'utilisateur requis"
 }
