--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -5,5 +5,6 @@
   "Close": "閉じる",
   "Open": "開く",
   "Properties":"プロパティー",
-  "AuthenticationFailed": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました"
+  "AuthenticationFailed": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました",
+  "UsernameRequired": "ユーザー名が必要です"
 }
