prevent from login with empty username Signed-off-by: Baoyuan Xing <bxing@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -4,5 +4,6 @@
   "BringToFront": "Bring to Front",
   "Close": "Close",
   "Open": "Open",
-  "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}"
+  "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
+  "UsernameRequired": "Username required"
 }
