russain translation commit Signed-off-by: Baoyuan Xing <bxing@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -6,5 +6,5 @@
   "Open": "Открыть",
   "Properties": "Свойства",
   "AuthenticationFailed": "Ошибка аутентификации для {{types}}"
-  "UsernameRequired": "Username required"
+  "UsernameRequired": "Надо вести имя пользователя"
 }
