--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -5,6 +5,6 @@
   "Close": "Закрыть",
   "Open": "Открыть",
   "Properties": "Свойства",
-  "AuthenticationFailed": "Ошибка аутентификации для {{types}}"
+  "AuthenticationFailed": "Ошибка аутентификации для {{types}}",
   "UsernameRequired": "Надо вести имя пользователя"
 }
