Fix translation to Russian for "Username Required" message
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -6,5 +6,5 @@
   "Open": "Открыть",
   "Properties": "Свойства",
   "AuthenticationFailed": "Ошибка аутентификации для {{types}}",
-  "UsernameRequired": "Надо вести имя пользователя"
+  "UsernameRequired": "Введите имя пользователя"
 }
