Replace "Authentication failed..." message.
Replace "Authentication failed for 1 types. Types: ["zss"]" to "Incorrect user name and/or password".

Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -5,7 +5,7 @@
   "Close": "Close",
   "Open": "Open",
   "Properties":"Properties",
-  "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
+  "IncorrectUsernameAndOrPassword": "Incorrect user name and/or password",
   "UsernameRequired": "Username required"
 
 }
