Add French tranlsation
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -5,7 +5,7 @@
   "Close": "Fermer",
   "Open": "Ouvrir",
   "Properties":"Propriétés",
-  "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
+  "IncorrectUsernameAndOrPassword": "Nom d'utilisateur ou mot de passe incorrect",
   "UsernameRequired": "Nom d'utilisateur requis"
 
 }
