--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -5,6 +5,6 @@
   "Close": "关闭",
   "Open": "打开",
   "Properties":"属性",
-  "AuthenticationFailed": "{{numTypes}} 个类型验证失败 类型: {{types}}",
+  "IncorrectUsernameAndOrPassword": "用户名或密码错误",
   "UsernameRequired": "用户名不能为空"
 }
