Add Japanese translation
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -5,6 +5,6 @@
   "Close": "閉じる",
   "Open": "開く",
   "Properties":"プロパティー",
-  "AuthenticationFailed": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました",
+  "IncorrectUsernameAndOrPassword": "ユーザー名またはパスワードが正しくありません",
   "UsernameRequired": "ユーザー名が必要です"
 }
