Detect "Failed to communicate with zss authentication server" error
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -6,6 +6,7 @@
   "Open": "Open",
   "Properties":"Properties",
   "IncorrectUsernameAndOrPassword": "Incorrect user name and/or password",
+  "FailedToCommunicateWithZssAuthenticationServer": "Failed to communicate with zss authentication server",
   "UsernameRequired": "Username required"
 
 }
