Add JP, FR, ZH translations for "Failed to communicate With zss"
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -6,6 +6,7 @@
   "Open": "Ouvrir",
   "Properties":"Propriétés",
   "IncorrectUsernameAndOrPassword": "Nom d'utilisateur ou mot de passe incorrect",
+  "FailedToCommunicateWithZssAuthenticationServer": "La communication avec le serveur d'authentification zss a échoué",
   "UsernameRequired": "Nom d'utilisateur requis"
 
 }
