--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -6,5 +6,6 @@
   "Open": "打开",
   "Properties":"属性",
   "IncorrectUsernameAndOrPassword": "用户名或密码错误",
+  "FailedToCommunicateWithZssAuthenticationServer": "与zss认证服务器连接失败",
   "UsernameRequired": "用户名不能为空"
 }
