--- a/virtual-desktop/src/assets/i18n/messages.zh.xlf
+++ b/virtual-desktop/src/assets/i18n/messages.zh.xlf
@@ -47,6 +47,15 @@
         <note priority="1" from="description">Title of Sign out button</note>
         <note priority="1" from="meaning">signout button</note>
       </trans-unit>
+      <trans-unit id="apply-button" datatype="html">
+        <source>Apply</source><target state="new">应用</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">../../system-apps/system-settings-preferences/webClient/src/app/language/language.component.ts</context>
+          <context context-type="linenumber">23</context>
+        </context-group>
+        <note priority="1" from="description">Title of Apply button</note>
+        <note priority="1" from="meaning">button title</note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
