--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -8,11 +8,11 @@
   "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
   "UsernameRequired": "Nom d'utilisateur requis",
   "Languages": "Langues",
-  "LanguageSelected": "Langue Sélectionnée",
+  "Language Selected": "Langue Sélectionnée",
   "Apply": "Appliquer",
-  "LanguageChanges": "Changement de Langue",
-  "RestartDescr1": "Pour que le changement de langue prenne effet, Zowe doit être redémarré.",
-  "RestartDescr2": "Voulez-vous redémarrer votre session?",
-  "RestartNow": "Redémarrer Maintenant",
-  "RestartLater":  "Redémarrer Plus Tard"
+  "Language Changes": "Changement de Langue",
+  "For language changes to take effect, Zowe must be restarted.": "Pour que le changement de langue prenne effet, Zowe doit être redémarré.",
+  "Would you like to restart the desktop?": "Voulez-vous redémarrer votre session?",
+  "Restart Now": "Redémarrer Maintenant",
+  "Restart Later":  "Redémarrer Plus Tard"
 }
