--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -14,5 +14,10 @@
   "For language changes to take effect, Zowe must be restarted.": "言語の変更を反映するには、Zoweを再起動する必要があります。",
   "Would you like to restart the desktop?": "デスクトップを再起動しますか?",
   "Restart Now": "今すぐ再起動",
-  "Restart Later":  "後で再起動"
+  "Restart Later":  "後で再起動",
+  "English": "英語",
+  "French": "フランス語",
+  "Russian": "ロシア",
+  "Japanese": "日本人",
+  "Chinese": "中国語"
 }
