--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -14,5 +14,10 @@
   "For language changes to take effect, Zowe must be restarted.": "Чтобы полностью изменить язык, нужно перезагрузить Zowe.",
   "Would you like to restart the desktop?": "Вы хотите перезагрузить рабочий стол?",
   "Restart Now": "Перезагрузить Сейчас",
-  "Restart Later":  "Перезагрузить Позже"
+  "Restart Later":  "Перезагрузить Позже",
+  "English": "English",
+  "French": "Французский",
+  "Russian": "Русский",
+  "Japanese": "Японский",
+  "Chinese": "Китайский"
 }
