Added German + missing translation files + bugs
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -1,23 +1,26 @@
 {
-  "UnpinFromTaskbar": "Unpin from taskbar",
-  "PinToTaskbar":"Pin to taskbar",
-  "BringToFront": "Bring to Front",
-  "Close": "Close",
-  "Open": "Open",
-  "Properties":"Properties",
-  "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
-  "UsernameRequired": "Username required",
-  "Languages": "Languages",
-  "Language Selected": "Language Selected",
   "Apply": "Apply",
-  "Language Changes": "Language Changes",
-  "For language changes to take effect, Zowe must be restarted.": "For language changes to take effect, Zowe must be restarted.",
-  "Would you like to restart the desktop?": "Would you like to restart the desktop?",
-  "Restart Now": "Restart Now",
-  "Restart Later":  "Restart Later",
+  "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
+  "BringToFront": "Bring to Front",
+  "Chinese": "Chinese",
+  "Close All": "Close All",
+  "Close": "Close",
   "English": "English",
+  "For language changes to take effect, Zowe must be restarted.": "For language changes to take effect, Zowe must be restarted.",
   "French": "French",
-  "Russian": "Russian",
   "Japanese": "Japanese",
-  "Chinese": "Chinese"
+  "Language Changes": "Language Changes",
+  "Language Selected": "Language Selected",
+  "Languages": "Languages",
+  "Open New": "Open New",
+  "Open": "Open",
+  "PinToTaskbar":"Pin to taskbar",
+  "Properties":"Properties",
+  "Restart Later":  "Restart Later",
+  "Restart Now": "Restart Now",
+  "Russian": "Russian",
+  "Select": "Select",
+  "UnpinFromTaskbar": "Unpin from taskbar",
+  "UsernameRequired": "Username required",
+  "Would you like to restart the desktop?": "Would you like to restart the desktop?"
 }
