--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -1,23 +1,26 @@
 {
-  "UnpinFromTaskbar": "Désépingler",
-  "PinToTaskbar": "Épingler",
-  "BringToFront": "Mettre au premier plan",
-  "Close": "Fermer",
-  "Open": "Ouvrir",
-  "Properties":"Propriétés",
-  "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
-  "UsernameRequired": "Nom d'utilisateur requis",
-  "Languages": "Langues",
-  "Language Selected": "Langue Sélectionnée",
   "Apply": "Appliquer",
-  "Language Changes": "Changement de Langue",
-  "For language changes to take effect, Zowe must be restarted.": "Pour que le changement de langue prenne effet, Zowe doit être redémarré.",
-  "Would you like to restart the desktop?": "Voulez-vous redémarrer votre session?",
-  "Restart Now": "Redémarrer Maintenant",
-  "Restart Later":  "Redémarrer Plus Tard",
+  "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
+  "BringToFront": "Mettre au premier plan",
+  "Chinese": "Chinois",
+  "Close All": "Fermer toutes les instances",
+  "Close": "Fermer",
   "English": "Anglais",
+  "For language changes to take effect, Zowe must be restarted.": "Pour que le changement de langue prenne effet, Zowe doit être redémarré.",
   "French": "Français",
-  "Russian": "Russe",
   "Japanese": "Japonais",
-  "Chinese": "Chinois"
+  "Language Changes": "Changement de Langue",
+  "Language Selected": "Langue Sélectionnée",
+  "Languages": "Langues",
+  "Open New": "Nouvelle Fenêtre",
+  "Open": "Ouvrir",
+  "PinToTaskbar": "Épingler",
+  "Properties":"Propriétés",
+  "Restart Later":  "Redémarrer Plus Tard",
+  "Restart Now": "Redémarrer Maintenant",
+  "Russian": "Russe",
+  "Select": "Sélectionner",
+  "UsernameRequired": "Nom d'utilisateur requis",
+  "Would you like to restart the desktop?": "Voulez-vous redémarrer votre session?",
+  "UnpinFromTaskbar": "Désépingler"
 }
