Added missing string
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -8,6 +8,7 @@
   "English": "Englisch",
   "For language changes to take effect, Zowe must be restarted.": "Damit die Änderung der Sprache übernommen wird, ist ein Neustart von Zowe erforderlich.",
   "French": "Französisch",
+  "German": "Deutsch",
   "Japanese": "Japanisch",
   "Language Changes": "Sprache ändern",
   "Language Selected": "Ausgewählte Sprache",
