--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -8,6 +8,7 @@
   "English": "English",
   "For language changes to take effect, Zowe must be restarted.": "For language changes to take effect, Zowe must be restarted.",
   "French": "French",
+  "German": "German",
   "Japanese": "Japanese",
   "Language Changes": "Language Changes",
   "Language Selected": "Language Selected",
