--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -8,6 +8,7 @@
   "English": "Английский",
   "For language changes to take effect, Zowe must be restarted.": "Чтобы полностью изменить язык, нужно перезагрузить Zowe.",
   "French": "Французский",
+  "German": "Немецкий",
   "Japanese": "Японский",
   "Language Changes": "Изменения Языка",
   "Language Selected": "Выбранный Язык",
