--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -8,6 +8,7 @@
   "English": "英语",
   "For language changes to take effect, Zowe must be restarted.": "为使语言变更生效，Zowe必须重新启动。",
   "French": "法语",
+  "German": "德语",
   "Japanese": "日语",
   "Language Changes": "语言变更",
   "Language Selected": "当前语言",
