--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -8,6 +8,7 @@
   "English": "Anglais",
   "For language changes to take effect, Zowe must be restarted.": "Pour que le changement de langue prenne effet, Zowe doit être redémarré.",
   "French": "Français",
+  "German": "Allemand",
   "Japanese": "Japonais",
   "Language Changes": "Changement de Langue",
   "Language Selected": "Langue Sélectionnée",
