--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -8,6 +8,7 @@
   "English": "英語",
   "For language changes to take effect, Zowe must be restarted.": "言語の変更を反映するには、Zoweを再起動する必要があります。",
   "French": "フランス語",
+  "German": "ドイツ語",
   "Japanese": "日本語",
   "Language Changes": "言語変更",
   "Language Selected": "選択された言語",
