Corrected Russian translations
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -1,27 +1,27 @@
 {
-  "Apply": "Применять",
+  "Apply": "Применить",
   "AuthenticationFailed": "Ошибка аутентификации {{numTypes}} для {{types}}",
   "BringToFront": "На передний план",
   "Chinese": "Китайский",
-  "Close All": "Закрыть Все",
+  "Close All": "Закрыть все",
   "Close": "Закрыть",
   "English": "Английский",
-  "For language changes to take effect, Zowe must be restarted.": "Чтобы полностью изменить язык, нужно перезагрузить Zowe.",
+  "For language changes to take effect, Zowe must be restarted.": "Чтобы изменить язык, необходимо перезагрузить Zowe.",
   "French": "Французский",
   "German": "Немецкий",
   "Japanese": "Японский",
-  "Language Changes": "Изменения Языка",
-  "Language Selected": "Выбранный Язык",
+  "Language Changes": "Смена языка",
+  "Language Selected": "Выбранный язык",
   "Languages": "Языки",
-  "Open New": "Открыть Новое",
+  "Open New": "Открыть новое",
   "Open": "Открыть",
   "PinToTaskbar": "Закрепить",
   "Properties": "Свойства",
-  "Restart Later":  "Перезагрузить Позже",
-  "Restart Now": "Перезагрузить Сейчас",
+  "Restart Later":  "Перезагрузить позже",
+  "Restart Now": "Перезагрузить сейчас",
   "Russian": "Русский",
   "Select": "Выбрать",
   "UsernameRequired": "Введите имя пользователя",
   "UnpinFromTaskbar": "Открепить",
-  "Would you like to restart the desktop?": "Вы хотите перезагрузить рабочий стол?"
+  "Would you like to restart the desktop?": "Перезагрузить рабочий стол?"
 }
