--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -13,7 +13,7 @@
   "Language Changes": "Смена языка",
   "Language Selected": "Выбранный язык",
   "Languages": "Языки",
-  "Open New": "Открыть новое",
+  "Open New": "Открыть новое окно",
   "Open": "Открыть",
   "PinToTaskbar": "Закрепить",
   "Properties": "Свойства",
