--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -1,7 +1,7 @@
 {
   "Apply": "Hinzufügen",
   "AuthenticationFailed": "Authentifizierung für {{numTypes}} Arten fehlgeschlagen. Arten sind: {{types}}",
-  "BringToFront": "in den Vordergrund holen",
+  "BringToFront": "In den Vordergrund holen",
   "Chinese": "Chinesisch",
   "Close All": "Alles Schließen",
   "Close": "Schließen",
