add translation strings
Signed-off-by: Jordan Cain <jordan.cain1@uk.ibm.com>

--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -15,6 +15,7 @@
   "Languages": "Sprachen",
   "Open New": "Neu Öffnen",
   "Open": "Öffnen",
+  "Open in New Browser Tab": "In neuem Browser Tab öffnen",
   "PinToTaskbar": "Anwendung anheften",
   "Properties": "Eigenschaften",
   "Restart Later":  "Später neu starten",
