--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -15,6 +15,7 @@
   "Languages": "Languages",
   "Open New": "Open New",
   "Open": "Open",
+  "Open in New Browser Tab": "Open In New Browser Tab",
   "PinToTaskbar":"Pin to taskbar",
   "Properties":"Properties",
   "Restart Later":  "Restart Later",
