--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -15,6 +15,7 @@
   "Languages": "言語",
   "Open New": "新しく開く",
   "Open": "開く",
+  "Open in New Browser Tab": "新しいブラウザー・タブで開く",
   "PinToTaskbar": "アプリケーションをピン留めする",
   "Properties":"プロパティー",
   "Restart Later":  "後で再起動",
