--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -15,6 +15,7 @@
   "Languages": "Языки",
   "Open New": "Открыть новое окно",
   "Open": "Открыть",
+  "Open in New Browser Tab": "открыть в новой вкладке браузера",
   "PinToTaskbar": "Закрепить",
   "Properties": "Свойства",
   "Restart Later":  "Перезагрузить позже",
