--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -15,6 +15,7 @@
   "Languages": "语言",
   "Open New": "打开新会话",
   "Open": "打开",
+  "Open in New Browser Tab": "在新的浏览器标签页打开",
   "PinToTaskbar":"将此程序锁定到任务栏",
   "Properties":"属性",
   "Restart Later":  "稍后重新启动",
