--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -18,7 +18,7 @@
   "Languages": "Langues",
   "Open New": "Nouvelle Fenêtre",
   "Open": "Ouvrir",
-  "Open in New Browser Tab": "ouvrir dans un nouvel onglet",
+  "Open in New Browser Tab": "Ouvrir dans un nouvel onglet",
   "PinToTaskbar": "Épingler",
   "Properties":"Propriétés",
   "Restart Later":  "Redémarrer Plus Tard",
