Link color change, i18n
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -20,6 +20,7 @@
   "Open": "開く",
   "Open in New Browser Tab": "新しいブラウザー・タブで開く",
   "PinToTaskbar": "アプリケーションをピン留めする",
+  "Refresh applications": "アプリケーションを再ロード",
   "Properties":"プロパティー",
   "Restart Later":  "後で再起動",
   "Restart Now": "今すぐ再起動",
