--- a/system-apps/web-browser-app/webClient/src/assets/i18n/messages.xlf
+++ b/system-apps/web-browser-app/webClient/src/assets/i18n/messages.xlf
@@ -2,6 +2,60 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="go-back" datatype="html">
+        <source>Go Back</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/browser/address-bar/address-bar.component.ts</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+        <note priority="1" from="description">Title of &apos;Go Back&apos; button</note>
+        <note priority="1" from="meaning">tooltip</note>
+      </trans-unit>
+      <trans-unit id="go-forward" datatype="html">
+        <source>Go Forward</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/browser/address-bar/address-bar.component.ts</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+        <note priority="1" from="description">Title of &apos;Go Forward&apos; button</note>
+        <note priority="1" from="meaning">tooltip</note>
+      </trans-unit>
+      <trans-unit id="refresh" datatype="html">
+        <source>Refresh</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/browser/address-bar/address-bar.component.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+        <note priority="1" from="description">Title of &apos;Refresh&apos; button</note>
+        <note priority="1" from="meaning">tooltip</note>
+      </trans-unit>
+      <trans-unit id="proxy" datatype="html">
+        <source>Proxy</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/browser/address-bar/address-bar.component.ts</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+        <note priority="1" from="description">Title of &apos;Proxy&apos; checkbox</note>
+        <note priority="1" from="meaning">label</note>
+      </trans-unit>
+      <trans-unit id="enable-disable-proxy" datatype="html">
+        <source>Enable/Disable Proxy</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/browser/address-bar/address-bar.component.ts</context>
+          <context context-type="linenumber">15</context>
+        </context-group>
+        <note priority="1" from="description">Title of &apos;Enable/Disable Proxy&apos; checkbox</note>
+        <note priority="1" from="meaning">tooltip</note>
+      </trans-unit>
+      <trans-unit id="remove-bookmark" datatype="html">
+        <source>Remove bookmark</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/browser/bookmark/bookmark.component.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+        <note priority="1" from="description">Title of &apos;Remove bookmark&apos; button</note>
+        <note priority="1" from="meaning">tooltip</note>
+      </trans-unit>
       <trans-unit id="remove-from-bookmarks" datatype="html">
         <source>Remove from bookmarks</source>
         <context-group purpose="location">
