Added translation for change password
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -2,6 +2,7 @@
   "Apply": "Hinzufügen",
   "AuthenticationFailed": "Authentifizierung für {{numTypes}} Arten fehlgeschlagen. Arten sind: {{types}}",
   "BringToFront": "In den Vordergrund holen",
+  "Change Password": "Passwort ändern",
   "Chinese": "Chinesisch",
   "Click here to renew your session.": "Hier klicken, um Sitzung zu erneuern.",
   "Close All": "Alles Schließen",
