--- a/virtual-desktop/src/assets/i18n/messages.en.json
+++ b/virtual-desktop/src/assets/i18n/messages.en.json
@@ -2,6 +2,7 @@
   "Apply": "Apply",
   "AuthenticationFailed": "Authentication failed for {{numTypes}} types. Types: {{types}}",
   "BringToFront": "Bring to Front",
+  "Change Password": "Change Password",
   "Chinese": "Chinese",
   "Click here to renew your session.": "Click here to renew your session.",
   "Close All": "Close All",
