--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -2,6 +2,7 @@
   "Apply": "Appliquer",
   "AuthenticationFailed": "L'authentification a échoué pour {{numTypes}} types. Les types: {{types}}",
   "BringToFront": "Mettre au premier plan",
+  "Change Password": "Changer de mot de Passe",
   "Chinese": "Chinois",
   "Click here to renew your session.": "Cliquez ici pour renouveler votre session.",
   "Close All": "Fermer toutes les instances",
