--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -2,6 +2,7 @@
   "Apply": "適用",
   "AuthenticationFailed": "{{numTypes}}個の認証プロバイダー({{types}})に対して認証が失敗しました",
   "BringToFront": "最前面に移動",
+  "Change Password": "パスワードを変更する",
   "Chinese": "中国語",
   "Click here to renew your session.": "セッションを更新するにはここをクリックしてください。",
   "Close All": "すべて閉じる",
