--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -2,6 +2,7 @@
   "Apply": "Применить",
   "AuthenticationFailed": "Ошибка аутентификации {{numTypes}} для {{types}}",
   "BringToFront": "На передний план",
+  "Change Password": "Изменить пароль",
   "Chinese": "Китайский",
   "Click here to renew your session.": "Нажмите сюда чтобы возобновить сессию.",
   "Close All": "Закрыть все",
