--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -2,6 +2,7 @@
   "Apply": "应用",
   "AuthenticationFailed": "{{numTypes}} 个类型验证失败 类型: {{types}}",
   "BringToFront": "置顶此程序",
+  "Change Password": "更改密码",
   "Chinese": "中文",
   "Click here to renew your session.": "点击此处以续订会话",
   "Close All": "关闭全部",
