Add more translations
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/assets/i18n/messages.de.json
+++ b/virtual-desktop/src/assets/i18n/messages.de.json
@@ -25,6 +25,7 @@
   "Restart Now": "Jetzt neu starten",
   "Retry": "Wiederholen",
   "Russian": "Russisch",
+  "Search": "Suchen",
   "Select": "Auswählen",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "Sitzung konnte nicht erneuert werden. Abmeldung erfolgt, falls Sitzung nicht erneuert wird. Hier clicken, um zu wiederholen.",
   "Session Expired": "Sitzung abgelaufen",
