--- a/virtual-desktop/src/assets/i18n/messages.fr.json
+++ b/virtual-desktop/src/assets/i18n/messages.fr.json
@@ -25,6 +25,7 @@
   "Restart Now": "Redémarrer Maintenant",
   "Retry": "Réessayer",
   "Russian": "Russe",
+  "Search": "Chercher",
   "Select": "Sélectionner",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "La session n'a pas pu être renouvelée. Cliquez ici pour réessayer.",
   "Session Expired": "La session a expiré",
