--- a/virtual-desktop/src/assets/i18n/messages.ru.json
+++ b/virtual-desktop/src/assets/i18n/messages.ru.json
@@ -21,10 +21,12 @@
   "Open in New Browser Tab": "Открыть в новой вкладке браузера",
   "PinToTaskbar": "Закрепить",
   "Properties": "Свойства",
+  "Refresh Applications": "Обновить приложения",
   "Restart Later":  "Перезагрузить позже",
   "Restart Now": "Перезагрузить сейчас",
   "Retry": "Повторить",
   "Russian": "Русский",
+  "Search": "Поиск",
   "Select": "Выбрать",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "Сессия не смогла быть продлена. Произойдет выход если нет продления. Нажмите сюда чтобы повторить попытку.",
   "Session Expired": "Сессия истекла",
