--- a/virtual-desktop/src/assets/i18n/messages.zh.json
+++ b/virtual-desktop/src/assets/i18n/messages.zh.json
@@ -25,6 +25,7 @@
   "Restart Now": "立即重新启动",
   "Retry": "重试",
   "Russian": "俄语",
+  "Search": "查找",
   "Select": "选择",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "会话无法续订。即将登出。点击此处重试",
   "Session Expired": "会话已过期",
