--- a/virtual-desktop/src/assets/i18n/messages.ja.json
+++ b/virtual-desktop/src/assets/i18n/messages.ja.json
@@ -21,12 +21,12 @@
   "Open in New Browser Tab": "新しいブラウザー・タブで開く",
   "PinToTaskbar": "アプリケーションをピン留めする",
   "Properties":"プロパティー",
-  "Refresh applications": "アプリケーションを再ロード",
+  "Refresh Applications": "アプリケーションを再ロード",
   "Restart Later":  "後で再起動",
   "Restart Now": "今すぐ再起動",
   "Retry": "再試行",
   "Russian": "ロシア語",
-  "Search Applications": "検索",
+  "Search": "検索",
   "Select": "選択",
   "Session could not be renewed. Logout will occur unless renewed. Click here to retry.": "セッションを更新できませんでした。更新しないとログアウトされます。再試行するにはここをクリックしてください。",
   "Session Expired": "セッションの期限が切れました。",
