--- a/virtual-desktop/src/assets/i18n/messages.de.xlf
+++ b/virtual-desktop/src/assets/i18n/messages.de.xlf
@@ -28,6 +28,24 @@
         <note priority="1" from="description">Label for password</note>
         <note priority="1" from="meaning">label</note>
       </trans-unit>
+      <trans-unit id="new-password-label" datatype="html">
+        <source>New Password</source><target state="new">Neues Kennwort</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <note priority="1" from="description">Label for new password</note>
+        <note priority="1" from="meaning">label</note>
+      </trans-unit>
+      <trans-unit id="confirm-new-password-label" datatype="html">
+        <source>Confirm New Password</source><target state="new">Bestätige Neues Passwort</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <note priority="1" from="description">Label for confirm new password</note>
+        <note priority="1" from="meaning">label</note>
+      </trans-unit>
       <trans-unit id="login-button-title" datatype="html">
         <source>Log in</source><target state="new">Anmelden</target>
         <context-group purpose="location">
@@ -35,6 +53,15 @@
           <context context-type="linenumber">37</context>
         </context-group>
         <note priority="1" from="description">Title of Login button</note>
+        <note priority="1" from="meaning">button title</note>
+      </trans-unit>
+      <trans-unit id="password-button-title" datatype="html">
+        <source>Change Password</source><target state="new">Passwort ändern</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
+          <context context-type="linenumber">37</context>
+        </context-group>
+        <note priority="1" from="description">Title of Password button</note>
         <note priority="1" from="meaning">button title</note>
       </trans-unit>
       <trans-unit id="signout-button-title" datatype="html">
