--- a/virtual-desktop/src/assets/i18n/messages.ru.xlf
+++ b/virtual-desktop/src/assets/i18n/messages.ru.xlf
@@ -29,15 +29,35 @@
         </context-group>
         <note priority="1" from="description">Label for username</note>
         <note priority="1" from="meaning">label</note>
-      </trans-unit><trans-unit id="password-label" datatype="html">
-        <source>Password</source><target state="new">Пароль</target>
+      </trans-unit>
+      <trans-unit id="password-label" datatype="html">
+        <source>Password</source><target state="new">пароль</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
           <context context-type="linenumber">24</context>
         </context-group>
         <note priority="1" from="description">Label for password</note>
         <note priority="1" from="meaning">label</note>
-      </trans-unit><trans-unit id="login-button-title" datatype="html">
+      </trans-unit>
+      <trans-unit id="new-password-label" datatype="html">
+        <source>New Password</source><target state="new">новый пароль</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <note priority="1" from="description">Label for new password</note>
+        <note priority="1" from="meaning">label</note>
+      </trans-unit>
+      <trans-unit id="confirm-new-password-label" datatype="html">
+        <source>Confirm New Password</source><target state="new">подтвердите новый пароль</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <note priority="1" from="description">Label for confirm new password</note>
+        <note priority="1" from="meaning">label</note>
+      </trans-unit>
+      <trans-unit id="login-button-title" datatype="html">
         <source>Log in</source><target state="new">Войти</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
@@ -45,7 +65,17 @@
         </context-group>
         <note priority="1" from="description">Title of Login button</note>
         <note priority="1" from="meaning">button title</note>
-      </trans-unit><trans-unit id="signout-button-title" datatype="html">
+      </trans-unit>
+      <trans-unit id="password-button-title" datatype="html">
+        <source>Change Password</source><target state="new">Изменить пароль</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/authentication-manager/login/login.component.ts</context>
+          <context context-type="linenumber">37</context>
+        </context-group>
+        <note priority="1" from="description">Title of Password button</note>
+        <note priority="1" from="meaning">button title</note>
+      </trans-unit>
+      <trans-unit id="signout-button-title" datatype="html">
         <source>Log out</source><target state="new">Выйти</target>
         
         <note priority="1" from="description">Title of Sign out button</note>
